# ce-sched

./: .gitignore  Cargo.toml  README.md  ceapp.toml  package.json
crates/ce-sched-core/: Cargo.toml
crates/ce-sched-core/src/: api.rs  graph.rs  lib.rs  placer.rs  scorer.rs  vendor.rs
crates/ce-sched-daemon/: Cargo.toml
crates/ce-sched-daemon/src/: main.rs
crates/ce-sched-sdk/: Cargo.toml
crates/ce-sched-sdk/examples/: quickstart.rs
crates/ce-sched-sdk/src/: lib.rs
docs/: api-spec.md  live-mesh-report.md  node-profile-spec.md  placement-design.md
examples/: place-gpu-job.js
sdk-ts/: package-lock.json  package.json  tsconfig.json
sdk-ts/src/: index.ts
src/: ce.js  graph.js  index.js  placer.js  scorer.js  types.js  vendor.js
web/: fixtures.js  placement.html
