# ce-sched — Rust workspace.
#
# Mirrors the ce-bench layout (see ../ce-bench/docs/RUST-DAEMON-ARCH.md): a pure core crate carrying
# the wire types + the placement brain, a per-machine daemon binary exposing the HTTP API, and a
# typed Rust SDK over that API. The existing JS implementation (src/, examples/, web/) is kept in
# place during the rewrite — this workspace adds the Rust port alongside it.
[workspace]
resolver = "2"
members = [
    "crates/ce-sched-core",
    "crates/ce-sched-daemon",
    "crates/ce-sched-sdk",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Leif Rydenfalk <ledamecrydenfalk@gmail.com>"]
repository = "https://github.com/ce-net/ce-sched"

# Shared dependency versions (kept in lockstep with ce-bench / ce-rs).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ce-rs = { path = "/home/asdfghj/ce-net/ce-rs" }
